--- a/shiyan-13/InnovationEngineerNoTest/app/build.gradle
+++ b/shiyan-13/InnovationEngineerNoTest/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-web:3.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+    implementation 'com.android.support:support-annotations:23.1.1'
 }
